// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-badge value ! 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      <span class="mg-badge__value">
        !
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value ? 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      <span class="mg-badge__value">
        ?
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 1 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 99+ 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      <span class="mg-badge__value">
        99+
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 100 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      <span class="mg-badge__value">
        100
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant danger outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--danger">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant danger outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--danger mg-badge--outline">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant info outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant info outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info mg-badge--outline">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant primary outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--primary">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant primary outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--primary">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant secondary outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--secondary">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant secondary outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--secondary">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant success outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--success">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant success outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--success">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant text-color outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--text-color">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant text-color outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--text-color">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant warning outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--warning">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant warning outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--warning">
      <span class="mg-badge__value">
        1
      </span>
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;
